# Test_application

./: .env.example  Makefile  README.md  pyproject.toml
src/: .env  manage.py  testik.py
src/app/: main.py
src/app/config/: base.py  db.py
src/app/dao/: db_base.py  db_bl.py  db_client.py
src/app/models/: __init__.py  query.py
src/app/routers/: __init__.py  bl_interact.py  handler.py  shema.py  а.py
src/app/routers/shemas/: base.py  query.py
src/app/templates/: index.html  index2.html  index3.html  index4.html
src/app/tests/: test.py  test_app.py
src/app/ui/: __init__.py  k.py  page.py
