[tool.poetry]
name = "bl-selector"
version = "0.1.0"
description = ""
authors = ["ol.n.nikiforova <ol.n.nikiforova@tinkoff.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.3.3"
pydantic = "^2.6.0"
sqlalchemy = "^2.0.25"
pydantic-settings = "^2.1.0"
gunicorn = "^21.2.0"
pymantic = "^1.0.0"
rdflib = "^7.0.0"
flask-restx = "^1.3.0"
starlette = "^0.37.0"
ruff = "^0.2.1"
mypy = "^1.8.0"
flask-wtf = "^1.2.1"
wtforms = "^3.1.2"
coverage = "^7.4.1"


[tool.poetry.group.tests.dependencies]
pytest = "^8.0.0"


[tool.poetry.group.linters.dependencies]
black = "^24.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
